--- a/29Septiembre.ipynb
+++ b/29Septiembre.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPbGZcJf64Y21+Bn4cQFcq0",
+      "authorship_tag": "ABX9TyPntUEPwb6bEPwjU/nFHGHO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,69 +32,171 @@
       "source": [
         "edad = 10"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "7nlXjRmIvcft",
-        "outputId": "8fb648ae-6bca-409f-a5eb-eef78c53cab3",
+        "outputId": "2ee33bad-86c8-4100-d7d4-07766fbf913a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 197
+          "height": 51
         }
       },
       "source": [
-        "print(edad)\n",
-        "colores = ['rojo', 'azul', 'verde', 'morado', 'violeta']\n",
+        "print (edad)\n",
+        "colores = ('rojo','azul','verde','morado','violeta')\n",
         "print(colores)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-20-0c8d36b7f889>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0medad\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mcolores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'rojo'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'azul'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'verde'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'morado'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'violeta'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolores\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: 'list' object is not callable"
-          ]
+          "output_type": "stream",
+          "text": [
+            "10\n",
+            "('rojo', 'azul', 'verde', 'morado', 'violeta')\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FiogCtVpyNZp"
+        "id": "FiogCtVpyNZp",
+        "outputId": "816a9a74-b1a1-4995-e634-09ec94eb668d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
-        ""
+        "colores [3]\n",
+        "print(colores[3])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "morado\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "xRh5Vi45taml"
+        "id": "sE5Fr-5nWHrk",
+        "outputId": "d1a58f7b-8bfd-4c3b-bc2c-b6f3ef8159da",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
+        "nombre = 'Alberto'\n",
+        "print(nombre[0])\n"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "A\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3ZEBdc3kWrX1",
+        "outputId": "9e3365f5-bea0-4ec6-962f-9473675ff9af",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "print(nombre[0:3:1])\n",
+        "\n"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Alb\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0s2M_a_tW1_G",
+        "outputId": "695e0864-b088-4c0c-fd52-48405b33c97e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        }
+      },
+      "source": [
+        "for letra in nombre:\n",
+        "  print(letra)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "A\n",
+            "l\n",
+            "b\n",
+            "e\n",
+            "r\n",
+            "t\n",
+            "o\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "In_vUfRmXmeb",
+        "outputId": "773add99-92c8-48af-f5c4-6dbb7b5e5ea4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        }
+      },
+      "source": [
+        "!()[https://images.app.goo.gl/9WYpKaHQmA1AfFDJ7]\n",
         "\n",
         "\n",
-        "```\n",
-        "# Tiene formato de código\n",
-        "\n",
-        "```\n",
-        "# Tiene formato de código\n",
-        "```\n",
         "\n",
         "\n",
-        "```\n",
         "\n",
-        "# Nueva sección"
+        "\n"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/bin/bash: -c: line 0: syntax error near unexpected token `)'\n",
+            "/bin/bash: -c: line 0: `()[https://images.app.goo.gl/9WYpKaHQmA1AfFDJ7]'\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
